<resources>
    <string name="app_name">ChatBank</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="title_activity_chat">ChatBank</string>
    <string name="typemsg">Type a message</string>
    <string name="acc_no">"\"ABC123\""</string>
    <string name="acc_info">"Enter the <b>cpin</b> for your account "</string>
    <string name="confirm_t">Confirm Transaction</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="logout_msg">Are you sure, you want to logout ?</string>
    <string name="title_activity_setting">Settings</string>
    <string name="t_limit">Daily transaction limit</string>
    <string name="limit_r">Max limit : Rs.</string>
    <string name="fav_t">Favourite transactions</string>
    <string name="save">Save</string>
    <string name="help">Help</string>
    <string name="title_activity_help">Help</string>
    <string name="helpc">Basic Commands</string>
    <string name="recharge_ser"><b>Recharge Service</b></string>
    <string name="recharge_comm">1. recharge <i>10-digit mobile number</i> with rs <i>amount</i>\n2. recharge dth with <i>amount</i>\n3. pay my <i>biller_name</i> \n or \n3. pay <i>biller_name</i></string>
    <string name="transfer_ser"><b>Money transfer service</b></string>
    <string name="transfer_comm">1. transfer <i>amount</i> to ac <i>benefeciary account no.</i>\n or \n1. transfer rs <i>amount</i> to a/c <i>benefeciary account no.</i></string>
    <string name="credit_info_ser"><b>Card details service</b></string>
    <string name="credit_info_comm">1. view my card info \n or\n1. card details \n or\n1. card info </string>
    <string name="cust_info_ser"><b>About user</b></string>
    <string name="cust_info_comm">1. who am i \n or\n1. about me \n or\n1. my details or\n1. you know me</string>
    <string name="fav_ser"><b>Favourite saved services</b></string>
    <string name="fav">(User first need to set the favourite services in settings)</string>
    <string name="fav_comm">1. do 1\n2. do 2 \n3. do 3\n4. do 4\n5. do 5\n<i>(Where number indicates the corresponding favourite service)</i></string>


</resources>
